# 1moreai

./: .env.example  README.md  pyproject.toml
src/call_center/: crew.py  main.py
